--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ p {
 }
 
 .conteiner{
+   <img src="img/comida-Vegana_V2.jpg" width="auto" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio"></img>
    border: 1px solid black;
    max-width: 90%;
    text-align: center;
