--- a/css/style.css
+++ b/css/style.css
@@ -157,10 +157,11 @@ p {
 }
 
 .conteiner{
-   <img src="img/comida-Vegana_V2.jpg" width="auto" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio"></img>
+<img width:auto src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio"></img>
    border: 1px solid black;
    max-width: 90%;
-   text-align: center;
+   text-align: justify;
    background: white;
    padding: 60px;
+   box-sizing: border-box;
 }
