--- a/css/style.css
+++ b/css/style.css
@@ -157,11 +157,9 @@ p {
 }
 
 .conteiner{
-<img width:90% src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio"></img>
    border: 1px solid black;
    max-width: 90%;
-   text-align: justify;
-   text: center;
+   text-align: center;
    background: white;
    padding: 60px;
    box-sizing: border-box;
