--- a/css/style.css
+++ b/css/style.css
@@ -161,10 +161,11 @@ p {
    max-width: 90%;
    text-align: center;
    background: white;
-   padding: 150px;
+   padding: 100px;
+   padding-top: 0%
    box-sizing: border-box;
 }
 
 #sympla-widget-626655{
-   align-content: center;
+   align-self: center;
 }
