--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ p {
 .conteiner{
    
    max-width: 90%;
-   text-align: justify;
+   text-align: center;
    background: white;
    
    padding-left: 150px;
