--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,8 @@ p {
    max-width: 90%;
    text-align: center;
    background: white;
-   font-family: 'Open Sans', sans-serif;
+   font-family:'Merriweather', serif;
+   font-size: 18px;
    padding-left: 150px;
    box-sizing: border-box;
 }
